[package]
name = "advent_of_rust"
version = "0.1.0"
edition = "2021"
build = "./src/build.rs"

[dependencies]
dotenv = "0.15"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
chrono = "0.4"
chrono-tz = "0.10"
concat-idents = "1.1"
clap = { version = "4.5", features = ["derive"] }
criterion = "0.5"
rayon = "1.10.0"
