[package]
name = "advent_of_rust"
version = "0.1.0"
edition = "2021"
build = "./src/build.rs"

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
chrono = "0.4.38"
chrono-tz = "0.10.0"

[dev-dependencies]
criterion = "0.5.0"

[[bench]]
name = "y2022"
harness = false

